Fixed Image that was covering company logo

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ body {
 
   .leftSide img {
     position: relative;
-    bottom: 660px;
+    bottom: 670px;
     right: 80px;
   }
 
